fix giao dien trang dgnl

--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -59,7 +59,7 @@
           </form>
         </div>
       </div>
-      <div class="tw-grid tw-grid-cols-4  tw-gap-7">
+      <div class="tw-grid tw-gap-7">
         <ul class="test-capacity__item capacity__related-list row m-0">
           <div class="col col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let capacity of listCapacity">
             <app-capacity-related-item [capacityItem]="capacity"></app-capacity-related-item>
