--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -61,8 +61,12 @@
       </div>
       <div class="tw-grid tw-gap-7">
         <ul class="test-capacity__item capacity__related-list row m-0">
-          <div class="col col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let capacity of listCapacity">
+          <!-- <div class="col col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let capacity of listCapacity">
             <app-capacity-related-item [capacityItem]="capacity"></app-capacity-related-item>
+          </div> -->
+
+          <div class="col col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let item of ListSemeter">
+            <app-semeter [SemeterItem]="item"></app-semeter>
           </div>
         </ul>
       </div>
