--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,6 +23,27 @@
             </option>
           </select>
         </div>
+
+        <div class="form-group mb-3">
+          <select name="accountEmail" id="" class="form-select" formControlName="accountEmail">
+            <option value="">Chọn tài khoản</option>
+            <option value="anhltpph45144@fpt.edu.vn">
+              Le Thi Phuong Anh (FPL HN)
+            </option>
+            <option value="dongpdph27348@fpt.edu.vn">
+              Pham Duy Dong PH 2 7 3 4 8
+            </option>
+            <option value="toanvdph31829@fpt.edu.vn">
+              toanvdph 3 1 8 2 9 fpthn
+            </option>
+            <option value="huongbxph31898@fpt.edu.vn">
+              Bui Xuan Huong PH 3 1 8 9 8
+            </option>
+            <option value="anhltpph45144@fpt.edu.vn">
+              Le Thi Phuong Anh (FPL HN)
+            </option>
+          </select>
+        </div>
         <!--        <button href="javascript:;" class="btn_login-google border-0 w-100 text-decoration-none d-flex align-items-center shadow-none">-->
         <!--          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"-->
         <!--               class="bi bi-google mb-1" viewBox="0 0 16 16">-->
