--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -24,7 +24,7 @@
                         </a></li>
                     <li class="menu-res-item "><a routerLink="/test-nang-luc"
                             class="menu-res-link text-decoration-none text-uppercase fw-bold">
-                            Test năng lực
+                            Cuộc Thi
                         </a></li>
                 </ul>
 
@@ -41,9 +41,7 @@
                         routerLink="">Trang
                         Chủ</a>
                 </li>
-                <li class="nav-item active"><a class=" fw-bold nav-link-item  text-uppercase  text-decoration-none " [routerLink]="['/test-nang-luc']">Test
-                        năng
-                        lực</a></li>
+                <li class="nav-item active"><a class=" fw-bold nav-link-item  text-uppercase  text-decoration-none " [routerLink]="['/test-nang-luc']">Cuộc Thi</a></li>
                 <li *ngIf="statusLogin == true"><i matBadge="4" matBadgePosition="after"
                         class="fas fa-bell header-icon-message  color-blue" matBadgeColor="warn"></i>
                 </li>
