--- a/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
+++ b/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
@@ -10,9 +10,9 @@
       <div class="text-center">
         <p *ngIf="isTakingExam">Câu hỏi: <span class="text-red">{{ data.total_questions }} câu</span>, thời gian: <span
           class="text-red">{{ data.time }} phút</span></p>
-  
+
         <div *ngIf="!isTakingExam">
-          <span>Môn thi: {{ roundDetail.name_subject }} -  Cơ sở : {{  Exam.campus_name.name }}</span>,
+          <span>Môn thi: {{ roundDetail.name_subject }}</span>
           <!-- {{ DataPoetry.start_time }} -->
           <!-- {{ DataPoetry.end_time }} -->
           <!-- bắt đầu: <span class="text-red"></span>,
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-  
+
     <!-- chờ làm bài -->
     <section class="capacity__exam-description text-center" *ngIf="!isTakingExam">
       <h2 class="text-center capacity__exam-description-title">
@@ -28,70 +28,70 @@
         <span class="text-uppercase text-red">bắt đầu</span>
         để làm bài
       </h2>
-  
+
       <button class="btn btn-register text-center btn-base-type-bg" (click)="handleTakeExam()">Bắt đầu</button>
     </section>
-  
+
     <!-- làm bài -->
     <form (ngSubmit)="handleSubmitExam()" [formGroup]="formAnswers" *ngIf="isTakingExam">
       <div class="row">
         <div class="col col-12 col-md-3">
           <div class="sidebar">
             <h2 class="sidebar__title">{{ data.name }}</h2>
-  
+
             <ul class="sidebar__list m-0 p-0">
               <li class="sidebar__list-item d-flex align-items-center">
                 <div class="sidebar__list-item-icon">
                   <i class="fa-solid fa-list"></i>
                 </div>
-  
+
                 <div class="sidebar__list-item-text">
                   <strong>{{ data.total_questions }}</strong> câu hỏi
                 </div>
               </li>
-  
+
               <li class="sidebar__list-item d-flex align-items-center">
                 <div class="sidebar__list-item-icon">
                   <i class="fa-solid fa-clock"></i>
                 </div>
-  
+
                 <div class="sidebar__list-item-text">
                   <strong>{{ data.time }}</strong> phút làm bài
                 </div>
               </li>
-  
+
               <li class="sidebar__list-item d-flex align-items-center primary-color">
                 <div class="sidebar__list-item-icon primary-color">
                   <i class="fa-solid fa-hourglass"></i>
                 </div>
-  
+
                 <div class="sidebar__list-item-text">
                   Thời gian còn lại
                 </div>
               </li>
             </ul>
-  
+
             <ul class="sidebar__countdown d-flex justify-content-center p-0">
               <li class="sidebar__countdown-item text-center">
                 <strong
                   class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.minutes }}</strong>
                 Phút
               </li>
-  
+
               <li class="primary-color sidebar__countdown-item-time">:</li>
-  
+
               <li class="sidebar__countdown-item text-center">
                 <strong
                   class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.seconds }}</strong>
                 Giây
               </li>
             </ul>
-  
+
             <button class="btn btn-register sidebar__countdown-btn">Nộp bài</button>
-  
+
             <section class="question">
               <span class="question__title">Câu hỏi</span>
-  
+
               <div class="question__list">
                 <!-- active câu hỏi đã làm -->
                 <div class="question__list-item" (click)="scrollToQuestion(i)"
@@ -101,10 +101,10 @@
                 </div>
               </div>
             </section>
-  
+
             <section class="sidebar__note">
               <span class="sidebar__note-title primary-color">* Lưu ý</span>
-  
+
               <ul class="sidebar__note-list">
                 <li class="sidebar__note-list-item">1. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
                 <li class="sidebar__note-list-item">2. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -112,7 +112,7 @@
             </section>
           </div>
         </div>
-  
+
         <div class="col col-12 col-md-9 question__content">
           <ul class="question__content-list">
             <li class="question__content-item" *ngFor="let question of fakeQuestionData; let i = index" #questions>
@@ -137,7 +137,7 @@
         </div>
       </div>
     </form>
-    
+
   </div>
   <ng-template #templateName>
     <div class="container my-4" #templateName>
@@ -145,7 +145,7 @@
         <h2 class="text-center capacity__exam-description-title">
           Bạn không có bài thi nào trong ca thi này
         </h2>
-    
+
       </section>
     </div>
   </ng-template>
@@ -157,7 +157,7 @@
       <h2 class="text-center capacity__exam-description-title">
         Bạn đã làm bài thi này không thể làm lại nữa
       </h2>
-  
+
     </section>
   </div>
 </ng-template>
