dinhtv7 hides filter in test-nang-luc route

--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -14,51 +14,51 @@
       <div class="">
         <h2 class="!tw-font-bold tw-text-lg !tw-my-4">Test năng lực</h2>
       </div>
-      <div class="tw-grid tw-grid-cols-4 tw-justify-between tw-items-center tw-mb-5">
-        <div class="tw-col-span-3 tw-space-x-2 tw-space-y-4">
-          <span>Đã chọn</span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i
-            class="bi bi-x"></i></button></span>
-          <button class="test-capacity__action action--del">Xóa tất cả</button>
-          <button class="test-capacity__action action--hidden">Thu gọn <i class="bi bi-arrow-up"></i></button>
-          <button class="test-capacity__action action--show-all">Xem thêm <i
-            class="bi bi-arrow-down"></i></button>
-        </div>
-        <div class="">
-          <form class="tw-flex tw-items-center">
-            <label for="simple-search" class="tw-sr-only">Search</label>
-            <div class="tw-relative tw-w-full">
-              <button
-                class="tw-flex tw-absolute tw-inset-y-0 tw-left-0 tw-items-center tw-pl-3 tw-pointer-events-none tw-text-gray-400">
-                <i class="bi bi-search tw-text-xl tw-text-gray-400"></i>
-              </button>
-              <input type="text" id="simple-search"
-                     class="tw-outline-none tw-bg-gray-50 tw-border tw-border-gray-300 tw-text-gray-900 tw-text-sm tw-rounded tw-block tw-w-full tw-pl-10 tw-p-2.5  dark:tw-bg-gray-700 dark:tw-border-gray-600 dark:tw-placeholder-gray-400 dark:tw-text-white dark:focus:tw-ring-blue-500 dark:focus:tw-border-blue-500"
-                     placeholder="Tìm kiếm tag, tên bài test,..." required>
-            </div>
-          </form>
-        </div>
-      </div>
+<!--      <div class="tw-grid tw-grid-cols-4 tw-justify-between tw-items-center tw-mb-5">-->
+<!--        <div class="tw-col-span-3 tw-space-x-2 tw-space-y-4">-->
+<!--          <span>Đã chọn</span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <span class="test-capacity__tag"><span>Javascript</span> <button class="test-capacity__del-tag"><i-->
+<!--            class="bi bi-x"></i></button></span>-->
+<!--          <button class="test-capacity__action action&#45;&#45;del">Xóa tất cả</button>-->
+<!--          <button class="test-capacity__action action&#45;&#45;hidden">Thu gọn <i class="bi bi-arrow-up"></i></button>-->
+<!--          <button class="test-capacity__action action&#45;&#45;show-all">Xem thêm <i-->
+<!--            class="bi bi-arrow-down"></i></button>-->
+<!--        </div>-->
+<!--        <div class="">-->
+<!--          <form class="tw-flex tw-items-center">-->
+<!--            <label for="simple-search" class="tw-sr-only">Search</label>-->
+<!--            <div class="tw-relative tw-w-full">-->
+<!--              <button-->
+<!--                class="tw-flex tw-absolute tw-inset-y-0 tw-left-0 tw-items-center tw-pl-3 tw-pointer-events-none tw-text-gray-400">-->
+<!--                <i class="bi bi-search tw-text-xl tw-text-gray-400"></i>-->
+<!--              </button>-->
+<!--              <input type="text" id="simple-search"-->
+<!--                     class="tw-outline-none tw-bg-gray-50 tw-border tw-border-gray-300 tw-text-gray-900 tw-text-sm tw-rounded tw-block tw-w-full tw-pl-10 tw-p-2.5  dark:tw-bg-gray-700 dark:tw-border-gray-600 dark:tw-placeholder-gray-400 dark:tw-text-white dark:focus:tw-ring-blue-500 dark:focus:tw-border-blue-500"-->
+<!--                     placeholder="Tìm kiếm tag, tên bài test,..." required>-->
+<!--            </div>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="tw-grid tw-gap-7">
         <ul class="test-capacity__item capacity__related-list row m-0">
           <!-- <div class="col col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let capacity of listCapacity">
