--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -4,11 +4,11 @@
       <div class="pb-4">
         <a routerLink="" class="router--home">Trang chủ</a> <span class="router--index"> / Test năng lực</span>
       </div>
-      <div class="">
-        <img class="banner"
-             src="https://images.unsplash.com/photo-1649859398731-d3c4ebca53fc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-             alt="">
-      </div>
+<!--      <div class="">-->
+<!--        <img class="banner"-->
+<!--             src="https://images.unsplash.com/photo-1649859398731-d3c4ebca53fc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"-->
+<!--             alt="">-->
+<!--      </div>-->
     </div>
     <div class="">
       <div class="">
