--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -42,9 +42,9 @@
                         Chủ</a>
                 </li>
                 <li class="nav-item active"><a class=" fw-bold nav-link-item  text-uppercase  text-decoration-none " [routerLink]="['/test-nang-luc']">Cuộc Thi</a></li>
-                <li *ngIf="statusLogin == true"><i matBadge="4" matBadgePosition="after"
-                        class="fas fa-bell header-icon-message  color-blue" matBadgeColor="warn"></i>
-                </li>
+<!--                <li *ngIf="statusLogin == true"><i matBadge="4" matBadgePosition="after"-->
+<!--                        class="fas fa-bell header-icon-message  color-blue" matBadgeColor="warn"></i>-->
+<!--                </li>-->
                 <li *ngIf="statusLogin == false" class="btn-login">
                     <a routerLink="/login" class="text-decoration-none mb-2 btn-outline-login">Đăng nhập</a>
                 </li>
