--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="">
       <div class="">
-        <h2 class="!tw-font-bold tw-text-lg !tw-my-4">Test năng lực</h2>
+        <h2 class="!tw-font-bold tw-text-lg !tw-my-4">Bài kiểm tra</h2>
       </div>
 <!--      <div class="tw-grid tw-grid-cols-4 tw-justify-between tw-items-center tw-mb-5">-->
 <!--        <div class="tw-col-span-3 tw-space-x-2 tw-space-y-4">-->
