--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
         <div class="form-group mb-3">
           <select name="campus_code" id="" class="form-select" formControlName="campus_code">
             <option value="">Lựa chọn cơ sở</option>
-            <option value="ph">
+            <option value="1">
               CĐ Hà Nội
             </option>
           </select>
