--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,7 +32,7 @@
         <!--          <span class="ms-2">Google</span>-->
         <!--        </button>-->
 
-        <div class="form-group mb-3">
+        <!-- <div class="form-group mb-3">
           <select name="accountEmail" id="" class="form-select" formControlName="accountEmail">
             <option value="">Chọn tài khoản</option>
             <option value="anhltpph45144@fpt.edu.vn">
@@ -51,7 +51,7 @@
               Le Thi Phuong Anh (FPL HN)
             </option>
           </select>
-        </div>
+        </div> -->
         <button href="javascript:;"
                 class="btn_login-google border-0 w-100 text-decoration-none d-flex align-items-center shadow-none">
           <span class="">Đăng nhập</span>
