--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -2,7 +2,7 @@
   <div class="container py-4">
     <div class="">
       <div class="pb-4">
-        <a routerLink="" class="router--home">Trang chủ</a> <span class="router--index"> / Test năng lực</span>
+        <a routerLink="" class="router--home">Trang chủ</a> <span class="router--index"> / Danh sách bài thi</span>
       </div>
 <!--      <div class="">-->
 <!--        <img class="banner"-->
