--- a/src/app/pages/poetry/poetry.component.html
+++ b/src/app/pages/poetry/poetry.component.html
@@ -9,7 +9,7 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb" *ngIf="!isFetchingCapacity">
                 <li class="breadcrumb-item"><a routerLink="/">Trang chủ</a></li>
-                <li class="breadcrumb-item"><a routerLink="/test-nang-luc">Test năng lực</a></li>
+                <li class="breadcrumb-item"><a routerLink="/test-nang-luc">Danh sách bài thi</a></li>
               </ol>
             </nav>
             <div *ngIf="isFetchingCapacity">
