--- a/src/app/pages/capacity-exam/capacity-exam.component.html
+++ b/src/app/pages/capacity-exam/capacity-exam.component.html
@@ -103,8 +103,9 @@
             <span class="sidebar__note-title primary-color">* Lưu ý</span>
 
             <ul class="sidebar__note-list">
-              <li class="sidebar__note-list-item">1. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-              <li class="sidebar__note-list-item">2. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+              <li class="sidebar__note-list-item">- Sinh viên chú ý thời gian làm bài</li>
+              <li class="sidebar__note-list-item">- Chỉ được sử dụng 1 bút và 1 tờ giấy nháp.</li>
+              <li class="sidebar__note-list-item">- Chỉ được sử dụng 1 bút và 1 tờ giấy nháp</li>
             </ul>
           </section>
         </div>
