--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <hr>
-    <div class="mb-3">
+    <!-- <div class="mb-3">
         <h3 class="fw-bold title text-uppercase text-center color-blue">Lợi ích khi tham gia</h3>
         <div class="title-line">
         </div>
@@ -69,7 +69,7 @@
                     beatae dolore asperiores corrupti laboriosam quis eum.</p>
             </span>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <div class="container-fluid section_plan text-center mt-4">
@@ -79,19 +79,19 @@
             <div class="col-3 section_plan-item mb-4 show-on-scroll zoom">
                 <h3 class="section_plan-bag-number text-white section_plan-student">0</h3>
                 <span class="text-white section_plan-bag-text fw-bold ">
-                    Năm hoạt động
+                    Doanh nghiệp đối tác
                 </span>
             </div>
             <div class="col-3 section_plan-item mb-4 show-on-scroll zoom">
                 <h3 class="section_plan-bag-number  text-white section_plan-year">0</h3>
                 <span class="text-white section_plan-bag-text fw-bold">
-                    Sinh viên
+                    Sinh viên & Cựu SV
                 </span>
             </div>
             <div class="col-3 mb-4 section_plan-item show-on-scroll zoom">
                 <h3 class="section_plan-bag-number  text-white section_plan-pass">0</h3>
                 <span class="text-white section_plan-bag-text fw-bold">
-                    Được nhận
+                    Sinh viên có việc làm
                 </span>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="col-5 company-represent">
                         <img class="ml-5"
-                            src="./../../../assets/img/Tạo-dáng-chụp-ảnh-doanh-nhân-nam-removebg-preview.png" alt="">
+                            src="./../../../assets/img/Tạo-dáng-chụp-ảnh-doanh-nhân-nam-removebg-preview.jpg" alt="">
                     </div>
                 </div>
                 <div class="d-flex" ngxSlickItem>
