--- a/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
+++ b/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
@@ -106,8 +106,9 @@
               <span class="sidebar__note-title primary-color">* Lưu ý</span>
 
               <ul class="sidebar__note-list">
-                <li class="sidebar__note-list-item">1. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                <li class="sidebar__note-list-item">2. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                <li class="sidebar__note-list-item">- Sinh viên chú ý thời gian làm bài</li>
+                <li class="sidebar__note-list-item">- Chỉ được sử dụng 1 bút và 1 tờ giấy nháp</li>
+                <li class="sidebar__note-list-item">- Chỉ được nộp bài sau 2/3 thời gian</li>
               </ul>
             </section>
           </div>
