--- a/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
+++ b/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
@@ -29,115 +29,126 @@
         để làm bài
       </h2>
 
-      <button class="btn btn-register text-center btn-base-type-bg" (click)="handleTakeExam()">Bắt đầu</button>
+      <button class="btn btn-register text-center btn-base-type-bg"  (click)="handleTakeExam()">Bắt đầu</button>
     </section>
 
     <!-- làm bài -->
-    <form (ngSubmit)="handleSubmitExam()" [formGroup]="formAnswers" *ngIf="isTakingExam">
-      <div class="row">
-        <div class="col col-12 col-md-3">
-          <div class="sidebar">
-            <h2 class="sidebar__title">{{ data.name }}</h2>
-
-            <ul class="sidebar__list m-0 p-0">
-              <li class="sidebar__list-item d-flex align-items-center">
-                <div class="sidebar__list-item-icon">
-                  <i class="fa-solid fa-list"></i>
-                </div>
-
-                <div class="sidebar__list-item-text">
-                  <strong>{{ data.total_questions }}</strong> câu hỏi
-                </div>
-              </li>
-
-              <li class="sidebar__list-item d-flex align-items-center">
-                <div class="sidebar__list-item-icon">
-                  <i class="fa-solid fa-clock"></i>
-                </div>
-
-                <div class="sidebar__list-item-text">
-                  <strong>{{ data.time }}</strong> phút làm bài
-                </div>
-              </li>
-
-              <li class="sidebar__list-item d-flex align-items-center primary-color">
-                <div class="sidebar__list-item-icon primary-color">
-                  <i class="fa-solid fa-hourglass"></i>
-                </div>
-
-                <div class="sidebar__list-item-text">
-                  Thời gian còn lại
-                </div>
-              </li>
-            </ul>
-
-            <ul class="sidebar__countdown d-flex justify-content-center p-0">
-              <li class="sidebar__countdown-item text-center">
-                <strong
-                  class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.minutes }}</strong>
-                Phút
-              </li>
-
-              <li class="primary-color sidebar__countdown-item-time">:</li>
-
-              <li class="sidebar__countdown-item text-center">
-                <strong
-                  class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.seconds }}</strong>
-                Giây
-              </li>
-            </ul>
-
-            <button class="btn btn-register sidebar__countdown-btn">Nộp bài</button>
-
-            <section class="question">
-              <span class="question__title">Câu hỏi</span>
-
-              <div class="question__list">
-                <!-- active câu hỏi đã làm -->
-                <div class="question__list-item" (click)="scrollToQuestion(i)"
-                     [ngClass]="{active: checkQuesAnswered(ques.id)}"
-                     *ngFor="let ques of fakeQuestionData; let i = index">
-                  <div class="question__list-item-inner">{{ i + 1 }}</div>
-                </div>
-              </div>
-            </section>
-
-            <section class="sidebar__note">
-              <span class="sidebar__note-title primary-color">* Lưu ý</span>
-
-              <ul class="sidebar__note-list">
-                <li class="sidebar__note-list-item">- Sinh viên chú ý thời gian làm bài</li>
-                <li class="sidebar__note-list-item">- Chỉ được sử dụng 1 bút và 1 tờ giấy nháp</li>
-                <li class="sidebar__note-list-item">- Chỉ được nộp bài sau 2/3 thời gian</li>
-              </ul>
-            </section>
-          </div>
-        </div>
-
-        <div class="col col-12 col-md-9 question__content">
-          <ul class="question__content-list">
-            <li class="question__content-item" *ngFor="let question of fakeQuestionData; let i = index" #questions>
-              <span class="question__content-item-num d-block">Câu {{ i + 1 }}:</span>
-              <!-- [appMath]="" -->
-              <!-- | replaceContent: question.images -->
-              <p   class="question__content-item-content" id="mathjax_id"   [appMath]="question.content | replaceContent: question.images "></p>
-              <ul class="answers">
-                <li class="answers__item" *ngFor="let answer of question.answers; let j = index"
-                    (click)="handleChooseAnswer(question.id)">
-                  <input class="answers__input" type="radio" hidden [id]="'answer-' + answer.id"
-                         [formControlName]="'question-' + (i + 1) + '-' + question.id + '-' + question.type" [value]="answer.id">
-                  <label [for]="'answer-' + answer.id" class="answer d-flex align-items-center">
-                    <span
-                      class="answer__num d-flex justify-content-center align-items-center">{{ (j + 10).toString(36).toUpperCase() }}</span>
-                    <p class="answer__content m-0" [appMath]="answer.content | replaceContent: question.images"></p>
-                  </label>
+    <div  *ngIf="isFullScreen;else error">
+      <form (ngSubmit)="handleSubmitExam()" [formGroup]="formAnswers" *ngIf="isTakingExam">
+        <div class="row">
+          <div class="col col-12 col-md-3">
+            <div class="sidebar">
+              <h2 class="sidebar__title">{{ data.name }}</h2>
+  
+              <ul class="sidebar__list m-0 p-0">
+                <li class="sidebar__list-item d-flex align-items-center">
+                  <div class="sidebar__list-item-icon">
+                    <i class="fa-solid fa-list"></i>
+                  </div>
+  
+                  <div class="sidebar__list-item-text">
+                    <strong>{{ data.total_questions }}</strong> câu hỏi
+                  </div>
+                </li>
+  
+                <li class="sidebar__list-item d-flex align-items-center">
+                  <div class="sidebar__list-item-icon">
+                    <i class="fa-solid fa-clock"></i>
+                  </div>
+  
+                  <div class="sidebar__list-item-text">
+                    <strong>{{ data.time }}</strong> phút làm bài
+                  </div>
+                </li>
+  
+                <li class="sidebar__list-item d-flex align-items-center primary-color">
+                  <div class="sidebar__list-item-icon primary-color">
+                    <i class="fa-solid fa-hourglass"></i>
+                  </div>
+  
+                  <div class="sidebar__list-item-text">
+                    Thời gian còn lại
+                  </div>
                 </li>
               </ul>
-            </li>
-          </ul>
+  
+              <ul class="sidebar__countdown d-flex justify-content-center p-0">
+                <li class="sidebar__countdown-item text-center">
+                  <strong
+                    class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.minutes }}</strong>
+                  Phút
+                </li>
+  
+                <li class="primary-color sidebar__countdown-item-time">:</li>
+  
+                <li class="sidebar__countdown-item text-center">
+                  <strong
+                    class="sidebar__countdown-item-time d-block primary-color">{{ countDownTimeExam.seconds }}</strong>
+                  Giây
+                </li>
+              </ul>
+  
+              <button class="btn btn-register sidebar__countdown-btn">Nộp bài</button>
+  
+              <section class="question">
+                <span class="question__title">Câu hỏi</span>
+  
+                <div class="question__list">
+                  <!-- active câu hỏi đã làm -->
+                  <div class="question__list-item" (click)="scrollToQuestion(i)"
+                       [ngClass]="{active: checkQuesAnswered(ques.id)}"
+                       *ngFor="let ques of fakeQuestionData; let i = index">
+                    <div class="question__list-item-inner">{{ i + 1 }}</div>
+                  </div>
+                </div>
+              </section>
+  
+              <section class="sidebar__note">
+                <span class="sidebar__note-title primary-color">* Lưu ý</span>
+                <ul class="sidebar__note-list">
+                  <li class="sidebar__note-list-item">- Sinh viên chú ý thời gian làm bài</li>
+                  <li class="sidebar__note-list-item">- Chỉ được sử dụng 1 bút và 1 tờ giấy nháp</li>
+                  <li class="sidebar__note-list-item">- Chỉ được nộp bài sau 2/3 thời gian</li>
+                </ul>
+              </section>
+            </div>
+          </div>
+  
+          <div class="col col-12 col-md-9 question__content">
+            <ul class="question__content-list">
+              <li class="question__content-item" *ngFor="let question of fakeQuestionData; let i = index" #questions>
+                <span class="question__content-item-num d-block">Câu {{ i + 1 }}:</span>
+                <!-- [appMath]="" -->
+                <!-- | replaceContent: question.images -->
+                <p   class="question__content-item-content" id="mathjax_id"   [appMath]="question.content | replaceContent: question.images "></p>
+                <ul class="answers">
+                  <li class="answers__item" *ngFor="let answer of question.answers; let j = index"
+                      (click)="handleChooseAnswer(question.id)">
+                    <input class="answers__input" type="radio" hidden [id]="'answer-' + answer.id"
+                           [formControlName]="'question-' + (i + 1) + '-' + question.id + '-' + question.type" [value]="answer.id">
+                    <label [for]="'answer-' + answer.id" class="answer d-flex align-items-center">
+                      <span
+                        class="answer__num d-flex justify-content-center align-items-center">{{ (j + 10).toString(36).toUpperCase() }}</span>
+                      <p class="answer__content m-0" [appMath]="answer.content | replaceContent: question.images"></p>
+                    </label>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
+      </form>
+    </div>
+    <ng-template #error>
+      <div class="container my-4" #templateName>
+        <section class="capacity__exam-description text-center">
+          <h2 class="text-center capacity__exam-description-title">
+              Vui lòng bấm f11 để hiển thị câu hỏi
+          </h2>
+  
+        </section>
       </div>
-    </form>
+    </ng-template>
 
   </div>
   <ng-template #templateName>
@@ -162,4 +173,3 @@
     </section>
   </div>
 </ng-template>
-
