--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,26 +3,14 @@
     <div class="row intro-header my-1">
         <div class="col-xl-6 col-md-12 col-sm-12">
             <div class="intro-detail-box">
-                <h2 class="text-left fs-3 color-blue fw-bold" style="margin-top:40px">Ai có
-                    thể tham gia
-                    cuộc thi ?</h2>
-                <p class="pt-2  lh-base fs-6 description-software" style="text-align:justify ">Lorem Phát
-                    biểu với báo
-                    giới sau
-                    cuộc hòa đàm với
-                    Nga, nhà
-                    đàm phán Ukraine David Arakhamia nói: “Theo cơ chế đó, các nước đứng ra bảo đảm an ninh cho Ukraine
-                    sẽ hành động theo cách tương tự Điều 5 trong Hiến chương NATO và thậm chí còn chắc chắn hơn”.
-
-                    Ông Arakhamia cho biết, Ukraine muốn các quốc gia bảo đảm là Mỹ, Trung Quốc, Pháp và Anh - 4 trong
-                    số 5 thành viên thường trực Hội đồng Bảo an Liên hợp quốc - cùng với Canada, Đức, Israel, Italy, Ba
-                    Lan và Thổ Nhĩ Kỳ. Ngoại trừ Trung Quốc và Israel, những quốc gia vừa đề cập đều là thành viên NATO.
+                <h2 class="text-left fs-3 color-blue fw-bold" style="margin-top:40px">Đón hè cực cool cùng hoạt động Team building tại Phổ thông Cao đẳng – FPT Polytechnic </h2>
+                <p class="pt-2  lh-base fs-6 description-software" style="text-align:justify ">Tháng 7 này Phổ thông Cao đẳng – FPT Polytechnic có gì?  Hè đã về cùng tiếng ve kêu rộn ràng với những cành phượng đỏ thắm cực phù hợp với những hoạt động Team building đúng không? Còn chần chừ …
                 </p>
             </div>
         </div>
         <div class="col-xl-6 col-md-12 col-sm-12">
             <span class="">
-                <img style="margin-top: 30px;" src="./../../../assets/img/image 407.svg" class="w-100 text-center"
+                <img style="margin-top: 30px;" src="https://phothongcaodang.fpt.edu.vn/wp-content/uploads/T7.23-WonderBeeP2_Thumnail-web-1536x1024px-770x500.png" class="w-100 text-center"
                     alt="">
             </span>
         </div>
@@ -100,19 +88,19 @@
 </div>
 
 <div class="assess-compacity-wraper py-4">
-    <div class="container position-relative">
+    <div class="container-fuild position-relative">
         <div class="mb-4">
-            <h3 class="fw-bold title text-uppercase text-center text-uppercase color-blue">Đánh giá của doanh nghiệp
+            <h3 class="fw-bold title text-uppercase text-center text-uppercase color-blue">THƯ VIỆN HÌNH ẢNH
             </h3>
             <div class="title-line">
             </div>
         </div>
 
 
-        <div class="assess-content-box position-relative">
+        <div class="position-relative">
             <ngx-slick-carousel class="carousel" [config]="sliderAssessCompacity">
                 <div class="d-flex" ngxSlickItem>
-                    <div class="col-7 assess-content-left">
+                    <!-- <div class="col-7 assess-content-left">
                         <div class="my-5">
                             <img class="assess-compacity-logo"
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShxdlbXdd7jnjF6SPFII6bnLNa8hsK1Npf1w&usqp=CAU"
@@ -132,14 +120,14 @@
                             </p>
                             <h4 class="assess-compacity-name float-end mx-3">HT.Vũ Chí Thành</h4>
                         </div>
-                    </div>
-                    <div class="col-5 company-represent">
+                    </div> -->
+                    <div class="col-12 company-represent">
                         <img class="ml-5"
-                            src="./../../../assets/img/Tạo-dáng-chụp-ảnh-doanh-nhân-nam-removebg-preview.jpg" alt="">
+                            src="https://phothongcaodang.fpt.edu.vn/wp-content/uploads/Landingpage-01.jpg" alt="">
                     </div>
                 </div>
                 <div class="d-flex" ngxSlickItem>
-                    <div class="col-7 assess-content-left">
+                    <!-- <div class="col-7 assess-content-left">
                         <div class="my-5">
                             <img class="assess-compacity-logo"
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShxdlbXdd7jnjF6SPFII6bnLNa8hsK1Npf1w&usqp=CAU"
@@ -159,14 +147,14 @@
                             </p>
                             <h4 class="assess-compacity-name float-end mx-3">HT.Vũ Chí Thành</h4>
                         </div>
-                    </div>
-                    <div class="col-5 company-represent">
+                    </div> -->
+                    <div class="col-12 company-represent">
                         <img class="ml-5"
-                            src="./../../../assets/img/Tạo-dáng-chụp-ảnh-doanh-nhân-nam-removebg-preview.png" alt="">
+                            src="https://phothongcaodang.fpt.edu.vn/wp-content/uploads/Landingpage-01.jpg" alt="">
                     </div>
                 </div>
                 <div class="d-flex" ngxSlickItem>
-                    <div class="col-7 assess-content-left">
+                    <!-- <div class="col-7 assess-content-left">
                         <div class="my-5">
                             <img class="assess-compacity-logo"
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShxdlbXdd7jnjF6SPFII6bnLNa8hsK1Npf1w&usqp=CAU"
@@ -186,10 +174,10 @@
                             </p>
                             <h4 class="assess-compacity-name float-end mx-3">HT.Vũ Chí Thành</h4>
                         </div>
-                    </div>
-                    <div class="col-5 company-represent">
+                    </div> -->
+                    <div class="col-12 company-represent">
                         <img class="ml-5"
-                            src="./../../../assets/img/Tạo-dáng-chụp-ảnh-doanh-nhân-nam-removebg-preview.png" alt="">
+                            src="https://phothongcaodang.fpt.edu.vn/wp-content/uploads/Landingpage-01.jpg" alt="">
                     </div>
                 </div>
             </ngx-slick-carousel>
